--- a/portfolio.html
+++ b/portfolio.html
@@ -243,6 +243,18 @@
                     </li>
                 </ul>
             </div>
+            <div class="third-box">
+                <p class="footer-header">Подпишитесь на рассылку</p>
+            
+                <input class="footer-email-input" type="email" placeholder="E-mail">
+                <button class="footer-btn" type="submit">
+                        <span class="footer-btn-contant">Подписаться
+                            <svg class="footer-btn-decor">
+                                <use href="./images/form.svg#icon-send"></use>
+                            </svg>
+                        </span>  
+                </button>
+            </div>
         </div>
     </footer>
 
